<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_50">Amazing (50%)</string>
    <string name="good_30">Good (30%)</string>
    <string name="okay_10">Okay (10%)</string>
    <string name="round_trip">Round Trip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>